Changed: Reverted back to <input type="button" /> because of IE6 not supporting <button> correctly. Changed: Added condition include for style_ie6.css to html_draw_top() Fixed: Huge padding on buttons in IE6. Fixed: JavaScript not initialising correctly on IE6.

--- a/forum/styles/default/style.css
+++ b/forum/styles/default/style.css
@@ -31,7 +31,7 @@ a.button {
 
 button::-moz-focus-inner {
     border: 0;
-    padding: 0;
+    padding: 2px 6px 1px;
 }
 
 form {
@@ -275,15 +275,15 @@ p, h1, h2 {
 
 .button, .dictionary_button {
     background-color: #5A809F;
-    border-width: 1px;
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
     color: #FFFFFF;
     cursor: pointer;
     font-family: verdana, arial, helvetica, sans-serif;
     font-size: 9pt;
     font-weight: bold;
-    margin: 0px;
-    padding: 1px 6px;
-    text-align: center;
     text-decoration: none;
 }
 
